objects/IRE_StagingTable__c.object
<CustomObject>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IREDeactivationDate__c</fullName>
        <label>IREDeactivationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IREReactivationDate__c</fullName>
        <label>IREReactivationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MasterCustomerId__c</fullName>
        <label>MasterCustomerId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriberKey__c</fullName>
        <label>SubscriberKey</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>IRE StagingTable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IRE StagingTable</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>